# aiobookoo

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  run.py  services.txt  test.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  pypi.yaml
aiobookoo/: __init__.py  bookooscale.py  const.py  decode.py  helpers.py
aiobookoov2/: bookooscale.py  const.py  decode.py  exceptions.py  helpers.py
src/: const.py  decode.py  exceptions.py
tests/: test_decode.py
