[project]
name = "aiobookoov2"
version = "0.3.2"
license = { text = "MIT" }
description = "Async Python library for Bookoo BLE scales (v2 fork by taliexo)"
readme = "README.md"
authors = [
    { name = "taliexo", email = "mail@taliexo.com" },
]
maintainers = [
    { name = "taliexo", email = "mail@taliexo.com" },
]
keywords = ["Bookoo", "Bluetooth", "api", "async", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["bleak >= 0.20.2"]
requires-python = ">= 3.12"

[project.urls]
Homepage = "https://github.com/taliexo/aiobookoo"
Repository = "https://github.com/taliexo/aiobookoo"
Documentation = "https://github.com/taliexo/aiobookoo"

[project.optional-dependencies]
dev = [
    "covdefaults == 2.3.0",
    "coverage == 7.6.7",
    "syrupy == 4.7.2",
    "pytest == 8.3.3",
    "pytest-asyncio == 0.24.0",
    "pytest-cov == 6.0.0",
]
